[gd_scene load_steps=9 format=2]

[ext_resource path="res://MGF Scene/AssetsScene3D/AimPoint.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets3D/Team/KH/M_GiapSi.material" type="Material" id=2]
[ext_resource path="res://MGF Scene/Main Game/PlayerController.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.3

[sub_resource type="PlaneMesh" id=13]

[sub_resource type="BoxShape3D" id=3]
margin = 0.01
size = Vector3( 0.37, 0.025, 0.53 )

[sub_resource type="BoxShape3D" id=7]
margin = 0.01
size = Vector3( 0.54, 0.025, 0.145 )

[sub_resource type="BoxShape3D" id=6]
margin = 0.01
size = Vector3( 0.145, 0.025, 0.16 )

[node name="Character" type="RigidBody3D" groups=["units"]]
mass = 10.0
physics_material_override = SubResource( 1 )
continuous_cd = true
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 3 )
playerName = "Giáp Sĩ"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 1.15, 0, 0, 0, 5, 0, 0, 0, 1.15, -0.00123425, 0.01, -0.0205622 )
mesh = SubResource( 13 )
material/0 = ExtResource( 2 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00614763, 0, -0.185963 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape3D" parent="."]
transform = Transform3D( 0.361624, 0, 0.932324, 0, 1, 0, -0.932324, 0, 0.361624, -0.343896, 0, 0.521023 )
shape = SubResource( 7 )

[node name="CollisionShape3" type="CollisionShape3D" parent="."]
transform = Transform3D( -0.424705, 0, 0.905332, 0, 1, 0, -0.905332, 0, -0.424705, 0.356606, 0, 0.520673 )
shape = SubResource( 7 )

[node name="CollisionShape4" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0193387, 0, -0.705912 )
shape = SubResource( 6 )

[node name="PivotPoint" parent="." instance=ExtResource( 1 )]

[node name="RightPoint" parent="." instance=ExtResource( 1 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.474935, 0, 0.885353 )

[node name="LeftPoint" parent="." instance=ExtResource( 1 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.546509, 0, 0.89093 )

[node name="AimPoint" parent="." instance=ExtResource( 1 )]
transform = Transform3D( 0.99996, 0, 0.00895342, 0, 1, 0, -0.00895342, 0, 0.99996, 0, 0, 0.886974 )
